0.0.4 (????-??-??)
==================
* Process specific user specifications before general ones.

0.0.3 (2013-02-08)
==================
* Support the ? wildcard operator in the users file.
* Output a user-specific stats page, which lists the user's nicks.

0.0.2 (2013-01-08)
==================
* Add the ability to manually link nicknames.
* Add the ability to selectively link nicknames based on timestamp or userhost.
* Allow wildcards in nick configuration files.
* Support giving users a non-nickname alias.
* Add a report to help identify important unassigned nicknames.
* Include nick count in the generated HTML statistics.
* Support separating users by nick!user@host rather than only by nick.

0.0.1 (2012-12-21)
==================
* Initial release. Supports converting logs to chatstats format and generating
  very basic HTML statistics about a set of logs.